# Intel-Image-Classification

./: .gitattributes  .gitignore  README.md  README_EN.md  cnn_graph  pyproject.toml
config/: training.yaml
data/: data.rar
outputs/: _best_model.pth  _events.out.tfevents.1763515343.DESKTOP-EC60AUS.48940.0  best_model.pth  events.out.tfevents.1763593011.DESKTOP-EC60AUS.40864.0
outputs/89.6_adamw/: best_model.pth  events.out.tfevents.1763675610.DESKTOP-EC60AUS.48856.0
outputs/90.07%/: best_model.part05.rar
outputs/logs/: events.out.tfevents.1763572603.DESKTOP-EC60AUS.27332.0  events.out.tfevents.1763581356.DESKTOP-EC60AUS.32340.0  events.out.tfevents.1763581356.DESKTOP-EC60AUS.32340.rar  events.out.tfevents.1763607544.DESKTOP-EC60AUS.32152.0
outputs/models/: best_model.part01.rar  best_model.part02.rar  best_model.part03.rar  best_model.part04.rar  best_model.part05.rar  best_model.part06.rar  best_model.part07.rar  best_model.part08.rar  best_model.part09.rar  best_model.part10.rar  best_model.part11.rar  best_model.part12.rar  best_model.pth
result/diagram/: cnn_graph
scripts/: learn_loop.py  predict.py  train.py
src/data/: datasets.py
src/models/: bottleneck.py  cnn.py  residual.py
src/training/: early_stopping.py  trainer.py
src/utils/: visualization.py
