[project]
name = "nature-classification-cnn"
version = "0.1.0"
description = ""
authors = [{ name = "Delshi", email = "redstupidyt@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "torchviz (>=0.0.3,<0.0.4)",
]

[tool.poetry]
packages = [{ include = "nature-classification-cnn", from = "src" }]


[[tool.poetry.source]]
name = "pytorch-cuda-src"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = { source = "pytorch-cuda-src" }
torchvision = { source = "pytorch-cuda-src" }
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
